# python-desktop-application-base

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
desktopapplicationbase/: __main__.py  _components.py  components.py  launcher.py
desktopapplicationbase/actions/: action.py  action_info.py  actions.py  actions_api.py  api.py  component.py  info.py
desktopapplicationbase/actions/handlers/: abstract.py  trigger_simple.py
desktopapplicationbase/apis/: project_persistence.py
desktopapplicationbase/application/: api.py  application_api.py
desktopapplicationbase/components/: argument_parser.py  components.py  configuration.py  project_persistence.py  resources.py
desktopapplicationbase/components_ui/: actions.py  central_widget.py  components_ui.py  configuration_ui.py  main_window_factory.py  system_tray_icon_factory.py
desktopapplicationbase/configuration/: api.py  configuration.py  configuration_api.py  info.py
desktopapplicationbase/dock_widget/: dock_widget_api.py
desktopapplicationbase/domain_contract/: project_persistence.py
desktopapplicationbase/domain_contract_ui/: actions.py
desktopapplicationbase/main_window/: api.py  main_window_api.py
desktopapplicationbase/self_updater/: self_updater_api.py
desktopapplicationbase/systray_icon/: api.py  systray_icon_api.py
