[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "desktopapplicationbase"
version = "0.0.2"
description = "Base building blocks desktop application"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  { name = "Mr Frangipane", email = "contact@frangipane.me" }
]
maintainers = [
  { name = "Mr Frangipane", email = "contact@frangipane.me" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron", "gui"]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
